--- a/src/templates/partials/header.njk
+++ b/src/templates/partials/header.njk
@@ -8,10 +8,10 @@
   <a class="navbar-brand" href="#">{{sitename}}</a>
   <div id="navbar">
     <nav class="nav navbar-nav pull-xs-left">
-      <a class="nav-item nav-link" href="#">Dashboard</a>
-      <a class="nav-item nav-link" href="#">Settings</a>
-      <a class="nav-item nav-link" href="#">Profile</a>
-      <a class="nav-item nav-link" href="#">Help</a>
+      <a class="nav-item nav-link" href="#"><i class="fa fa-dashboard" aria-hidden="true"></i> Dashboard</a>
+      <a class="nav-item nav-link" href="#"><i class="fa fa-cog" aria-hidden="true"></i> Settings</a>
+      <a class="nav-item nav-link" href="#"><i class="fa fa-user" aria-hidden="true"></i> Profile</a>
+      <a class="nav-item nav-link" href="#"><i class="fa fa-question-circle" aria-hidden="true"></i> Help</a>
     </nav>
     <form class="pull-xs-right">
       <input type="text" class="form-control" placeholder="Search...">
