--- a/src/assets/scss/components/_sample.scss
+++ b/src/assets/scss/components/_sample.scss
@@ -1,15 +1,36 @@
+/*
+ * Base structure
+ */
+
+/* Move down content because we have a fixed navbar that is 50px tall */
+
 body {
   padding-top: 50px;
 }
+
+/*
+ * Global add-ons
+ */
 
 .sub-header {
   padding-bottom: 10px;
   border-bottom: 1px solid #eee;
 }
 
+/*
+ * Top navigation
+ * Hide default border to remove 1px line.
+ */
+
 .navbar-fixed-top {
   border: 0;
 }
+
+/*
+ * Sidebar
+ */
+
+/* Hide for mobile, show later */
 
 .sidebar {
   display: none;
@@ -26,13 +47,17 @@ body {
     padding: 20px;
     overflow-x: hidden;
     overflow-y: auto;
+    /* Scrollable contents if viewport is shorter than content. */
     background-color: #f5f5f5;
     border-right: 1px solid #eee;
   }
 }
 
+/* Sidebar navigation */
+
 .nav-sidebar {
   margin-right: -21px;
+  /* 20px padding + 1px border */
   margin-bottom: 20px;
   margin-left: -20px;
   > {
@@ -51,11 +76,12 @@ body {
   }
 }
 
+/*
+ * Main content
+ */
+
 .main {
   padding: 20px;
-  .page-header {
-    margin-top: 0;
-  }
 }
 
 @media (min-width: 768px) {
@@ -64,6 +90,10 @@ body {
     padding-left: 40px;
   }
 }
+
+/*
+ * Placeholder dashboard ideas
+ */
 
 .placeholders {
   margin-bottom: 30px;
