--- a/src/templates/base.njk
+++ b/src/templates/base.njk
@@ -18,7 +18,7 @@
         <div class="col-sm-3 col-md-2 sidebar">
           {% include 'templates/partials/sidebar.njk' %}
         </div>
-        <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
+        <div class="col-sm-9 offset-sm-3 col-md-10 offset-md-2 main">
           {% block body %}
             {% block content %}{% endblock content %}
           {% endblock body %}
